# art-c-index-bug-fixing-time

./: =0.5.1  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh
data/raw/: final_list_of_contributors_after.csv
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: analise-exploratoria_id88.ipynb  commit_snapshot.ipynb  gerando-c-index.ipynb
src/dash/: filter.py
src/data/: load_data.py
src/features/: build_features.py  transform_data.py
src/visualization/: front_end_features.py  graphs.py  visualize.py
