[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["iuryrosal <iuryrosal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.10.3"
plotly = "^5.22.0"
click = "8.0.4"
scikit-learn = "^1.5.0"
tk = "^0.1.0"
streamlit = "1.8.0"
seaborn = "0.11.1"
pandas = "1.1.5"
matplotlib = "3.3.3"
python-dotenv = "^1.0.1"
protobuf = "==3.20.*"
altair = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
